--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <ul class="menu-items">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="shipping.html">Shop</a></li>
-                <li><a href="#tracking-section">Track Order</a></li>
+                <li><a href="Track.html">Track Order</a></li>
                 <li><a href="after-purchase.html">After Purchase</a></li>
             </ul>
 
@@ -108,16 +108,6 @@
     </section>
 
     <!-- 🔹 Order Tracking & Shipping Info -->
-    <section class="tracking-section text-center py-6">
-        <h2 class="text-2xl font-bold text-gray-900">📦 Track Your Order</h2>
-        <p class="text-gray-600">Enter your tracking number to check your delivery status.</p>
-        <div class="mt-4">
-            <input type="text" id="trackingNumber" class="border p-2 rounded w-60 text-center" placeholder="Enter your tracking number">
-            <button onclick="trackOrder()" class="bg-blue-500 text-white px-4 py-2 rounded ml-2">Track</button>
-        </div>
-        <p id="trackingResult" class="mt-2 text-red-500"></p>
-    <section id="tracking-section" class="tracking-section text-center py-6">
-    </section>
          
 
     <!-- 🔹 Payment Section -->
