--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
             <hr class="menu-divider">
 
             <ul class="menu-extra">
-                <li><a href="return-policy.html">Return Policy</a></li>
-                <li><a href="privacy-policy.html">Privacy Policy</a></li>
-                <li><a href="contact.html">Contact Us</a></li>
+                <li><a href="policies.html">Return Policy</a></li>
+                <li><a href="policies.html#return-policy-content">Privacy Policy</a></li>
+                <li><a href="policies.html#about-us-content">Contact Us</a></li>
             </ul>
         </div>
     </nav>
