--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       
       <div class="button-container">
     <!-- زر Shop Now -->
-          <a href="shopping.html" class="icon-button">
+          <a href="shopping" class="icon-button">
                 <img src="IMG_3399.jpeg" alt="Shop Now">
           </a>
 
