--- a/index.html
+++ b/index.html
@@ -80,6 +80,11 @@
      <div class="notification-bar">
          <p id="notification-text">🚀 New Orders Are Being Placed Right Now!</p>
      </div>
+      <!-- 🔹 قسم العداد وأكواد الخصم -->
+     <div class="discount-timer">
+         <p class="discount-text">🔥 Limited Time Offer! Use Code: <span id="discount-code"></span></p>
+         <p class="countdown">Offer expires in: <span id="countdown-timer"></span></p>
+     </div>
 
     <!-- 🔹 Product Showcase -->
     <section class="py-8 bg-gray-100 text-center">
