--- a/payment.html
+++ b/payment.html
@@ -3,29 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Payment</title>
+    <title>Secure Payment</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://www.paypal.com/sdk/js?client-id=YOUR_PAYPAL_CLIENT_ID"></script>
 </head>
 <body class="bg-gray-100 flex justify-center items-center min-h-screen">
 
     <div class="bg-white shadow-lg rounded-lg p-6 w-full max-w-md">
-        <h2 class="text-2xl font-bold text-gray-900 text-center mb-4">💳 Payment Details</h2>
+        <h2 class="text-3xl font-bold text-gray-900 text-center mb-6">💳 Secure Payment</h2>
 
         <!-- ✅ تفاصيل الطلب -->
-        <div class="mb-4">
-            <p class="text-lg font-semibold text-gray-700">Customer Details:</p>
-            <p><strong>Name:</strong> <span id="name"></span></p>
-            <p><strong>Country:</strong> <span id="country"></span></p>
-            <p><strong>City:</strong> <span id="city"></span></p>
-            <p><strong>Address:</strong> <span id="address"></span></p>
-            <p><strong>Address 2:</strong> <span id="address2"></span></p>
-            <p><strong>Phone:</strong> <span id="phone"></span></p>
-            <p class="text-xl font-bold mt-2">Total: $<span id="total"></span></p>
+        <div class="mb-6">
+            <h3 class="text-lg font-semibold text-gray-700 border-b pb-2">Customer Details</h3>
+            <p><strong>Name:</strong> <span id="name" class="text-gray-800"></span></p>
+            <p><strong>Country:</strong> <span id="country" class="text-gray-800"></span></p>
+            <p><strong>City:</strong> <span id="city" class="text-gray-800"></span></p>
+            <p><strong>Address:</strong> <span id="address" class="text-gray-800"></span></p>
+            <p><strong>Address 2:</strong> <span id="address2" class="text-gray-800"></span></p>
+            <p><strong>Phone:</strong> <span id="phone" class="text-gray-800"></span></p>
+            <p class="text-xl font-bold mt-4 text-gray-900">Total: $<span id="total"></span></p>
         </div>
 
         <!-- ✅ زر الدفع عبر PayPal -->
-        <div id="paypal-button-container"></div>
+        <div id="paypal-button-container" class="mb-4"></div>
+
+        <!-- ✅ زر الرجوع لتعديل الطلب -->
+        <button onclick="goBack()" class="w-full bg-gray-700 text-white py-2 px-4 rounded text-lg font-semibold hover:bg-gray-800">
+            ⬅️ Modify Order
+        </button>
     </div>
 
     <script>
@@ -82,6 +87,11 @@
                 });
             }
         }).render("#paypal-button-container");
+
+        // 🔹 زر العودة للتعديل
+        function goBack() {
+            window.history.back();
+        }
     </script>
 
 </body>
