--- a/index.html
+++ b/index.html
@@ -158,6 +158,10 @@
         <label class="block font-semibold text-gray-700">Address 2 (Optional):</label>
         <input type="text" id="address2" class="border border-gray-300 p-2 w-full rounded mb-2">
 
+        <!-- ✅ إدخال الرمز البريدي -->
+        <label class="block font-semibold text-gray-700">Postal Code:</label>
+        <input type="text" id="postalCode" class="border border-gray-300 p-2 w-full rounded mb-2" required>
+
         <label class="block font-semibold text-gray-700">Phone Number:</label>
         <div class="flex">
             <span id="phone-code" class="bg-gray-300 px-3 py-2 rounded-l">+1</span>
