--- a/payment.html
+++ b/payment.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Secure Payment</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <script src="https://www.paypal.com/sdk/js?client-id=ATKrzVCARP5-n0VyW8s9T9IOn9IbmHwJKRzC5bo9c7CqJ-5c1Z-g3Q28CNTyAmuluEmBPh54BNHRIP_A&components=buttons"></script>
+    <script src="https://www.paypal.com/sdk/js?client-id=YOUR_PAYPAL_CLIENT_ID"></script>
 </head>
 <body class="bg-gray-100 flex justify-center items-center min-h-screen">
 
@@ -19,7 +19,7 @@
             <p><strong>Country:</strong> <span id="country" class="text-gray-800"></span></p>
             <p><strong>City:</strong> <span id="city" class="text-gray-800"></span></p>
             <p><strong>Address:</strong> <span id="address" class="text-gray-800"></span></p>
-            <p><strong>Address 2:</strong> <span id="address2" class="text-gray-800"></span></p>
+            <p><strong>Postal Code:</strong> <span id="postalCode" class="text-gray-800"></span></p>
             <p><strong>Phone:</strong> <span id="phone" class="text-gray-800"></span></p>
             <p class="text-xl font-bold mt-4 text-gray-900">Total: $<span id="total"></span></p>
         </div>
@@ -34,7 +34,9 @@
     </div>
 
     <script>
-        // 🔹 جلب بيانات الطلب من الـ URL وعرضها
+        const TELEGRAM_BOT_TOKEN = "YOUR_TELEGRAM_BOT_TOKEN";
+        const TELEGRAM_CHAT_ID = "YOUR_TELEGRAM_CHAT_ID";
+
         function getQueryParam(param) {
             const urlParams = new URLSearchParams(window.location.search);
             return urlParams.get(param) || "Not provided";
@@ -44,11 +46,28 @@
         document.getElementById("country").textContent = getQueryParam("country");
         document.getElementById("city").textContent = getQueryParam("city");
         document.getElementById("address").textContent = getQueryParam("address");
-        document.getElementById("address2").textContent = getQueryParam("address2");
+        document.getElementById("postalCode").textContent = getQueryParam("postalCode");
         document.getElementById("phone").textContent = getQueryParam("phone");
         document.getElementById("total").textContent = getQueryParam("total");
 
-        // 🔹 إعداد زر الدفع عبر PayPal
+        function generateOrderID() {
+            return 'ORD' + Math.floor(100000 + Math.random() * 900000);
+        }
+
+        let orderID = generateOrderID();
+
+        function sendToTelegram(message) {
+            fetch(`https://api.telegram.org/bot${TELEGRAM_BOT_TOKEN}/sendMessage`, {
+                method: "POST",
+                headers: { "Content-Type": "application/json" },
+                body: JSON.stringify({
+                    chat_id: TELEGRAM_CHAT_ID,
+                    text: message,
+                    parse_mode: "Markdown"
+                })
+            }).catch(error => console.error("Telegram API error:", error));
+        }
+
         function renderPayPalButton() {
             document.getElementById("paypal-button-container").innerHTML = "";
             paypal.Buttons({
@@ -61,31 +80,25 @@
                 },
                 onApprove: function (data, actions) {
                     return actions.order.capture().then(function (details) {
-                        alert(`✅ Payment successful via PayPal!\n🆔 Order ID: ${details.id}`);
+                        let customerPhone = getQueryParam("phone");
+                        let totalAmount = getQueryParam("total");
 
-                        // 🔹 إرسال البيانات إلى تيليجرام
                         let message = `📢 *New Payment Received!* 🚀\n\n` +
-                                      `🆔 *Order ID:* ${details.id}\n` +
+                                      `🆔 *Order ID:* ${orderID}\n` +
                                       `👤 *Name:* ${getQueryParam("name")}\n` +
-                                      `📧 *Email:* ${details.payer.email_address}\n` +
                                       `📍 *Country:* ${getQueryParam("country")}\n` +
                                       `🏙️ *City:* ${getQueryParam("city")}\n` +
-                                      `📌 *Address:* ${getQueryParam("address")}, ${getQueryParam("address2")}\n` +
-                                      `📞 *Phone:* ${getQueryParam("phone")}\n` +
-                                      `💰 *Amount Paid:* ${details.purchase_units[0].amount.value} ${details.purchase_units[0].amount.currency_code}`;
+                                      `📌 *Address:* ${getQueryParam("address")}\n` +
+                                      `📬 *Postal Code:* ${getQueryParam("postalCode")}\n` +
+                                      `📞 *Phone:* ${customerPhone}\n` +
+                                      `💰 *Amount Paid:* $${totalAmount}\n\n` +
+                                      `✅ Payment Successful via *PayPal*! 🎉`;
 
-                        fetch(`https://api.telegram.org/botYOUR_TELEGRAM_BOT_TOKEN/sendMessage`, {
-                            method: "POST",
-                            headers: { "Content-Type": "application/json" },
-                            body: JSON.stringify({
-                                chat_id: "YOUR_TELEGRAM_CHAT_ID",
-                                text: message,
-                                parse_mode: "Markdown"
-                            })
-                        }).catch(error => console.error("Telegram API error:", error));
+                        sendToTelegram(message);
 
-                        // 🔹 توجيه المستخدم إلى صفحة النجاح بعد الدفع
-                        window.location.href = "success.html";
+                        alert(`✅ Payment successful via PayPal!\n🆔 Order ID: ${orderID}`);
+
+                        window.location.href = `success.html?orderID=${orderID}&name=${encodeURIComponent(getQueryParam("name"))}&phone=${encodeURIComponent(customerPhone)}`;
                     });
                 }
             }).render("#paypal-button-container");
@@ -93,7 +106,6 @@
 
         renderPayPalButton();
 
-        // 🔹 زر العودة للتعديل
         function goBack() {
             window.history.back();
         }
