--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 
     <!-- ✅ صورة المنتج -->
     <div class="flex justify-center mb-4">
-        <img src="product-image.jpg" alt="Product" class="w-48 h-auto rounded-lg border">
+        <img src="IMG_3378.png" alt="Product" class="w-48 h-auto rounded-lg border">
     </div>
 
     <!-- ✅ زر التحكم في الكمية -->
